Removed delete and put into feature branch
